--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="titulo"><h1>Gerador de Bordas</h1></div>
-        <div class="texto"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde reprehenderit, quisquam doloribus hic necessitatibus voluptas itaque.</p></div>
+        <div class="texto"><p>Este gerador de bordas é um projeto de uma serie de desafios de Java Script. </p></div>
         <div id="area" class="area">
 
             <div class="coluna1">
